services configs/insurance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-deployment
  namespace: back
  labels:
    deploy: insurance
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insurance
  template:
    metadata:
      labels:
        app: insurance
    spec:
      containers:
      - image: "registrytys9109.azurecr.io/insurance:1.0"
        imagePullPolicy: Always
        name: insurance
        resources:
          requests:
            memory: "512Mi"
            cpu: "1m"        
          limits:
            memory: "2Gi"
            cpu: "40m"
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: insurance
  namespace: back
spec:
  type: ClusterIP
  selector:
    app: insurance
  ports:
  - protocol: TCP
    name: insurance-http
    port: 80
    targetPort: 8081
