services configs/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: trips
        image: registrytys9109.azurecr.io/trips:1.0
        livenessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 80
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 80
          periodSeconds: 10
        ports:
        - containerPort: 80
          name: trips
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: back
spec:
  ports:
  - port: 80
    name: main
  selector:
    app: trips
