services configs/user-java.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: user-java
        image: registrytys9109.azurecr.io/user-java:1.0
        ports:
        - containerPort: 80
          name: user-java
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: back
spec:
  ports:
  - port: 80
  selector:
    app: user-java
