services configs/userprofile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: userprofile
        image: registrytys9109.azurecr.io/userprofile:1.0
        ports:
        - containerPort: 80
          name: userprofile
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: back
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
